# smalltime

./: .gitmodules  README.md  pins.txt  power_budget.txt
board/: fp-lib-table  smalltime-cache.lib  smalltime-rescue.lib  smalltime.bom  smalltime.kicad_pcb  smalltime.net  smalltime.pro  smalltime.sch  smalltime.xml
board/gerbers/: smalltime-B.Cu.gbl  smalltime-B.Mask.gbs  smalltime-B.SilkS.gbo  smalltime-Edge.Cuts.gbr  smalltime-F.Cu.gtl  smalltime-F.Mask.gts  smalltime-F.Paste.dxf  smalltime-F.SilkS.gto  smalltime.drl
board/parts/: com-09481.lib  ls0803gwk.lib
board/smalltime.pretty/: KEYSTONE500.kicad_mod  LS0803GWK.kicad_mod  SKHHLSA010.kicad_mod  YSD-439AB4B-35.kicad_mod  testpoint.kicad_mod
case/: .gitignore  case.dxf
firmware/: Makefile  README.md  STM32F051x6.ld  board.h  board.yaml  chconf.h  display.c  display.h  ds3231.c  ds3231.h  halconf.h  input.c  input.h  leds.c  leds.h  main.c  mcuconf.h  timekeeping.c  timekeeping.h
smalltime-rust/: Cargo.toml  Makefile  memory.x
smalltime-rust/.cargo/: config
smalltime-rust/src/: board.rs  display.rs  main.rs  non_blocking_delay.rs
