[package]
authors = ["David Turner <davidrs@dwt27.co.uk>"]
edition = "2021"
readme = "README.md"
name = "smalltime-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
stm32f0xx-hal = {version = "0.18.0", features = ["stm32f051", "rt"]}
ds323x = "0.4.0"
embedded-hal = "0.2.6"

# this lets you use `cargo fix`!
[[bin]]
name = "smalltime-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
